--- a/src/app/board/board.page.html
+++ b/src/app/board/board.page.html
@@ -5,14 +5,14 @@
 </ion-header>
 
 <ion-content>
-    <ng-container *ngIf="boardAndPossibleMoves$ | async as boardAndPossibleMoves">
-        <div *ngFor="let row of boardAndPossibleMoves[0]; let y = index">
+    <div *ngIf="boardAndPossibleMoves$ | async as boardAndPossibleMoves" class="board">
+        <ng-container *ngFor="let row of boardAndPossibleMoves[0]; let y = index">
             <div *ngFor="let piece of row; let x = index" (click)="selectPosition(x, y)" class="field"
-                 [class.possibleMove]="contains(boardAndPossibleMoves[1], {x:x,y:y})">
-                {{piece?.unicodeSymbol || '\u2610'}}
+                 [class.possibleMove]="contains(boardAndPossibleMoves[1], {x:x,y:y})" [class.odd]="(x+y) % 2 === 1"
+            [class.empty]="!piece?.unicodeSymbol" [class.white]="piece?.color === 'WHITE'" [class.black]="piece?.color === 'BLACK'">
+                {{piece?.unicodeSymbol || '\u2022' }}
             </div>
-            <br>
-        </div>
-    </ng-container>
+        </ng-container>
+    </div>
     <button (click)="toggleColor()" style="font-size: 1em; padding: 10px">{{colorDebug}}</button>
 </ion-content>
