--- a/src/app/board/board.page.html
+++ b/src/app/board/board.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-    <div *ngIf="boardAndPossibleMoves$ | async as boardAndPossibleMoves" class="board">
+    <div *ngIf="matrixAndPossibleMoves$ | async as boardAndPossibleMoves" class="board">
         <ng-container *ngFor="let row of boardAndPossibleMoves[0]; let y = index">
             <div *ngFor="let piece of row; let x = index" (click)="selectPosition(x, y)" class="field"
                  [class.possibleMove]="contains(boardAndPossibleMoves[1], {x:x,y:y})" [class.odd]="(x+y) % 2 === 1"
@@ -14,5 +14,9 @@
             </div>
         </ng-container>
     </div>
-    <button (click)="toggleColor()" style="font-size: 1em; padding: 10px">{{colorDebug}}</button>
+    <div *ngIf="game$ | async as game" style="font-size: 20px">
+    turn: {{game.turn}} |
+    winner: {{game.winner || 'NONE' }} |
+    draw: {{game.draw}}
+    </div>
 </ion-content>
