--- a/src/app/game/game.page.scss
+++ b/src/app/game/game.page.scss
@@ -15,24 +15,22 @@ ion-content {
 .field {
   text-align: center;
   background: #ffcb97;
-  cursor: pointer;
-  &.white {
-    color: white;
-    text-shadow: 0 0 5px black;
-  }
-  &.black {
-    color: black;
-    text-shadow: 0 0 5px white;
-  }
+  //&.white {
+  //  color: white;
+  //  text-shadow: 0 0 5px black;
+  //}
+  //&.black {
+  //  color: black;
+  //  text-shadow: 0 0 5px white;
+  //}
   &.odd {
     background: #b0693a;
   }
-  &.empty {
-    cursor: default;
-    color: transparent;
+  &.full {
+     cursor: pointer;
   }
   &.possibleMove {
     cursor: pointer;
-    color: #066d30;
+    background: #066d30;
   }
 }
