--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -24,4 +24,7 @@
 
   <ion-button (click)="gameService.undoMove('1').subscribe()"><--</ion-button>
   <ion-button (click)="gameService.redoMove('1').subscribe()">--></ion-button>
+
+  <br>
+  <ion-button (click)="createNewGame()">NEW GAME</ion-button>
 </ion-content>
