--- a/src/app/game/piece/piece.component.scss
+++ b/src/app/game/piece/piece.component.scss
@@ -5,3 +5,7 @@
 .black {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(137deg) brightness(103%) contrast(101%) drop-shadow(0px 5px 5px rgba(0, 0, 0, 1));
 }
+
+img {
+  //pointer-events:none;
+}
