--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,7 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.alertDialog {
+  --min-width: 400px;
+}
