--- a/src/app/game/game.page.html
+++ b/src/app/game/game.page.html
@@ -7,14 +7,8 @@
 <ion-content>
   <ion-button (click)="createNewGame()">NEW GAME</ion-button>
 
-  <div *ngIf="matrixAndPossibleMoves$ | async as boardAndPossibleMoves" class="board">
-    <ng-container *ngFor="let row of boardAndPossibleMoves[0]; let y = index">
-      <div *ngFor="let piece of row; let x = index" (click)="selectPosition(x, y)" class="field"
-           [class.possibleMove]="contains(boardAndPossibleMoves[1], {x:x,y:y})" [class.odd]="(x+y) % 2 === 1" [class.full]="!!piece">
-        <app-piece *ngIf="piece" [color]="piece?.color" [type]="piece?.type"></app-piece>
-      </div>
-    </ng-container>
-  </div>
+  <app-board [colorToken]="colorToken$ | async"></app-board>
+
   <div *ngIf="game$ | async as game" style="font-size: 40px">
     turn: {{game.turn}} |
     winner: {{game.winner || 'NONE' }} |
