--- a/src/app/game/piece/piece.component.html
+++ b/src/app/game/piece/piece.component.html
@@ -1,1 +1,4 @@
-<img [class.white]="color==='WHITE'" [class.black]="color==='BLACK'" [src]="imageSrc">
+<div [style.background-image]="'url(' + imageSrc + ')'"
+     [class.white]="color==='WHITE'"
+     [class.black]="color==='BLACK'">
+</div>
