--- a/src/app/game/board/board.component.html
+++ b/src/app/game/board/board.component.html
@@ -1,8 +1,13 @@
-<div *ngIf="matrixAndPossibleMoves$ | async as boardAndPossibleMoves" class="board">
-  <ng-container *ngFor="let row of boardAndPossibleMoves[0]; let y = index">
-    <div *ngFor="let piece of row; let x = index" (click)="selectPosition(x, y)" class="field"
-         [class.possibleMove]="contains(boardAndPossibleMoves[1], {x:x,y:y})" [class.odd]="(x+y) % 2 === 1" [class.full]="!!piece">
-      <app-piece *ngIf="piece" [color]="piece?.color" [type]="piece?.type"></app-piece>
+<div id="container">
+    <div *ngIf="matrixAndPossibleMoves$ | async as boardAndPossibleMoves" class="board">
+        <ng-container *ngFor="let row of boardAndPossibleMoves[0]; let y = index">
+            <div *ngFor="let piece of row; let x = index" (click)="selectPosition(x, y)" class="field"
+                 [class.possibleMove]="contains(boardAndPossibleMoves[1], {x:x,y:y})"
+                 [class.odd]="(x+y) % 2 === 1"
+                 [class.full]="!!piece"
+                 [class.selected]="selectedPosition && selectedPosition.x === x && selectedPosition.y === y">
+                <app-piece *ngIf="piece" [color]="piece?.color" [type]="piece?.type"></app-piece>
+            </div>
+        </ng-container>
     </div>
-  </ng-container>
 </div>
