--- a/src/app/game/game.page.scss
+++ b/src/app/game/game.page.scss
@@ -1,5 +1,14 @@
 ion-content {
-  font: 80px monospace;
+  text-align: center;
 }
 
+app-board {
+  width: 100%;
+}
+
+@media only screen and (min-width: 1200px) {
+  app-board {
+    width: 40%;
+  }
+}
 
