--- a/src/app/game/piece/piece.component.scss
+++ b/src/app/game/piece/piece.component.scss
@@ -1,11 +1,15 @@
-.white {
-  filter: drop-shadow(0px 5px 5px rgba(255, 255, 255, 1));
-}
+div {
+  width: 100%;
+  height: 100%;
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
 
-.black {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(137deg) brightness(103%) contrast(101%) drop-shadow(0px 5px 5px rgba(0, 0, 0, 1));
-}
+  &.white {
+    filter: drop-shadow(0px 5px 5px rgba(255, 255, 255, 1));
+  }
 
-img {
-  //pointer-events:none;
+  &.black {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(137deg) brightness(103%) contrast(101%) drop-shadow(0px 5px 5px rgba(0, 0, 0, 1));
+  }
 }
