--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,9 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-.alertDialog {
-  --min-width: 400px;
+@media only screen and (min-width: 1200px) {
+  .alertDialog {
+    --min-width: 400px;
+  }
 }
+
