--- a/src/app/game/board/board.component.scss
+++ b/src/app/game/board/board.component.scss
@@ -18,7 +18,7 @@
   left: 0;
   right: 0;
   border: 10px solid #502200;
-  display: inline-grid;
+  display: grid;
   grid-gap: 0;
   grid-template-columns: repeat(8, 1fr);
   user-select: none;
